[package]
name = "soukoban"
version = "0.1.0"
edition = "2021"

authors = ["ShenMian <sms_school@outlook.com>"]
license = "MIT OR Apache-2.0"

description = "A library provides the implementation of some algorithms and data structures related to Sokoban"
repository = "https://github.com/shenmian/soukoban"
keywords = ["sokoban", "solver"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false

# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
bitflags = "2.6"
itertools = "0.13"
nalgebra = "0.33"
thiserror = "1.0"

[dev-dependencies]
indoc = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
